--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,16 @@
   cursor: pointer;
   
 }
+
+.blur{
+  background: rgba(253, 120, 43, 0.69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(150px);
+  z-index: -9;
+}
+.hero-blur{
+  width: 30rem;
+  height: 30rem;
+  left: 0;
+}
