--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,3 +18,19 @@
     cursor: pointer;
     color: var(--orange);
 }
+
+/* Responsive Start */
+@media screen and (max-width: 768px) {
+    .header>:nth-child(2){
+        position: fixed;
+        right: 2rem;
+        z-index: 99;
+    }
+
+    .h-menu{
+        flex-direction: column;
+        background-color: var(--appColor);
+        padding: 2rem;
+    }
+}
+/* Responsive Ends */
