--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -7,6 +7,19 @@
     position: relative;
 }
 
+.plans-blur-1{
+    width: 32rem;
+    height: 23rem;
+    top: 6rem;
+    left: 0;
+}
+.plans-blur-2{
+    width: 32rem;
+    height: 23rem;
+    top: 10rem;
+    right: 0;
+}
+
 .plans{
     display: flex;
     align-items: center;
@@ -72,5 +85,14 @@
     color: orange;
 }
 
-
+/* Responsive Start */
+@media screen and (max-width: 768px) {
+    .plans{
+        flex-direction: column;
+    }
+    .plan:nth-child(2){
+        transform: none;
+    }
+}
+/* Responsive Ends */
 
