--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -57,8 +57,8 @@
     width: 20rem;
     height: 20rem;
     background:var(--planCard);
-    right: 6.5rem;
-    top: 4rem;
+    right: 6.75rem;
+    top: 3.2em;
 }
 .arrows{
     display: flex;
@@ -73,3 +73,46 @@
     width: 1.5rem;
     cursor: pointer;
 }
+
+
+/* Responsive Start */
+@media screen and (max-width: 768px) {
+    .Testimonials{
+        flex-direction: column;
+    }
+
+    .left-t>:nth-child(2),
+    .left-t>:nth-child(3){
+        font-size: xx-large;
+    }
+
+    .right-t{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .right-t>div{
+        position: relative;
+        display: none;
+    }
+
+    .right-t>img{
+        top: 0;
+        right: 0;
+        position: relative;
+        align-self: center;
+        width: 17rem;
+    }
+    .right-t>:last-child{
+        display: flex;
+        bottom: 0;
+        left: 0;
+        gap: 3rem;
+        justify-content: space-evenly;
+    }
+    
+}
+/* Responsive Ends */
