--- a/src/components/Joinus/Join.css
+++ b/src/components/Joinus/Join.css
@@ -4,7 +4,7 @@
     gap: 15rem;
 }
 .Join.hook{
-    overflow: hidden;
+    overflow: visible;
 }
 
 .left-j{
@@ -27,7 +27,10 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    padding: 1rem;
     position: relative;
+            
+
 
 }
 .email-container{
@@ -51,6 +54,7 @@
 .btn-join{
     background-color: var(--orange);
     color: white;
+    width: 7rem;
 }
 
 .alert-container{
@@ -111,18 +115,29 @@
         flex-direction: column;
         text-align: center;
     }
+    .left-j>hr{
+        position: absolute;
+        width: 10.5rem;
+        border: 2px solid var(--orange);
+        border-radius: 20px;
+        margin: -15px 25%;
+        
+    }
     .right-j{
         padding: 2rem;
+        
     }
     .email-container{
         gap: 0;
         position: relative;
         justify-content: center;
+        z-index: 2;
     }
 
     button.btn.btn-join{
         font-size: small;
-        height: 5rem;
+        max-height: 5rem;
+        
     }
 
     .email-container>button{
